Apache Tez Change Log
=====================

Release 0.6.1: Unreleased

INCOMPATIBLE CHANGES

ALL CHANGES:
  TEZ-1529. ATS and TezClient integration in secure kerberos enabled cluster.
  TEZ-2396. pig-tez-tfile-parser pom is hard coded to depend on 0.6.0-SNAPSHOT version.
  TEZ-2237. Valid events should be sent out when an Output is not started.
  TEZ-2399. Tez UI: add proper dependencies for computed properties
  TEZ-1988. Tez UI: does not work when using file:// in a browser
  TEZ-2256. Avoid use of BufferTooSmallException to signal end of buffer in UnorderedPartitionedKVWriter.
  TEZ-2385. branch-0.6 compile failure caused by TEZ-2226.
  TEZ-2390. tez-tools swimlane tool fails to parse large jobs >8K containers
  TEZ-2380. Disable fall back to reading from timeline if timeline disabled.
  TEZ-2226. Disable writing history to timeline if domain creation fails.
  TEZ-2259. Push additional data to Timeline for Recovery for better consumption in UI.
  TEZ-2365. Update tez-ui war's license/notice to reflect OFL license correctly.
  TEZ-1969. Stop the DAGAppMaster when a local mode client is stopped
  TEZ-2329. UI Query on final dag status performance improvement
  TEZ-2287. Deprecate VertexManagerPluginContext.getTaskContainer().
  TEZ-1909. Remove need to copy over all events from attempt 1 to attempt 2 dir
  TEZ-2061. Tez UI: vertex id column and filter on tasks page should be changed to vertex name
  TEZ-2242. Refactor ShuffleVertexManager code
  TEZ-2205. Tez still tries to post to ATS when yarn.timeline-service.enabled=false.
  TEZ-2047. Build fails against hadoop-2.2 post TEZ-2018
  TEZ-2064. SessionNotRunning Exception not thrown is all cases
  TEZ-2189. Tez UI live AM tracking url only works for localhost addresses
  TEZ-2179. Timeline relatedentries missing cause exaggerated warning.
  TEZ-2168. Fix application dependencies on mutually exclusive artifacts: tez-yarn-timeline-history
    and tez-yarn-timeline-history-with-acls.